# plasma-integration

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  README.md
autotests/: CMakeLists.txt  kdeplatformsystemtrayicon_unittest.cpp  kdeplatformtheme_config.h.in  kdeplatformtheme_unittest.cpp  kdirselectdialog_unittest.cpp  kfiledialog_unittest.cpp  kfiledialogqml_unittest.cpp  kfontsettingsdata_unittest.cpp  khintssettings_unittest.cpp  ksni_unittest.cpp
autotests/qml/: filedialog_parentless.qml  filedialog_withparent.qml
cmake/modules/: FindFontHack.cmake  FindFontNotoSans.cmake  FindQt5PlatformSupport.cmake  FindQt5ThemeSupport.cmake
po/ar/: plasmaintegration5.po
po/ast/: plasmaintegration5.po
po/az/: plasmaintegration5.po
po/bg/: plasmaintegration5.po
po/ca/: plasmaintegration5.po
po/ca@valencia/: plasmaintegration5.po
po/cs/: plasmaintegration5.po
po/da/: plasmaintegration5.po
po/de/: plasmaintegration5.po
po/el/: plasmaintegration5.po
po/en_GB/: plasmaintegration5.po
po/eo/: plasmaintegration5.po
po/es/: plasmaintegration5.po
po/et/: plasmaintegration5.po
po/eu/: plasmaintegration5.po
po/fi/: plasmaintegration5.po
po/fr/: plasmaintegration5.po
po/ga/: plasmaintegration5.po
po/gl/: plasmaintegration5.po
po/he/: plasmaintegration5.po
po/hi/: plasmaintegration5.po
po/hu/: plasmaintegration5.po
po/ia/: plasmaintegration5.po
po/id/: plasmaintegration5.po
po/is/: plasmaintegration5.po
po/it/: plasmaintegration5.po
po/ja/: plasmaintegration5.po
po/ka/: plasmaintegration5.po
po/ko/: plasmaintegration5.po
po/lt/: plasmaintegration5.po
po/lv/: plasmaintegration5.po
po/ml/: plasmaintegration5.po
po/nb/: plasmaintegration5.po
po/nl/: plasmaintegration5.po
po/nn/: plasmaintegration5.po
po/pa/: plasmaintegration5.po
po/pl/: plasmaintegration5.po
po/pt/: plasmaintegration5.po
po/pt_BR/: plasmaintegration5.po
po/ro/: plasmaintegration5.po
po/ru/: plasmaintegration5.po
po/sa/: plasmaintegration5.po
po/sk/: plasmaintegration5.po
po/sl/: plasmaintegration5.po
po/sr/: plasmaintegration5.po
po/sr@ijekavian/: plasmaintegration5.po
po/sr@latin/: plasmaintegration5.po
qt5/: CMakeLists.txt
qt5/autotests/: CMakeLists.txt  kdeplatformtheme_changed_kdeglobals  kdeplatformtheme_kdeglobals  kdeplatformtheme_unittest.cpp  kdirselectdialog_unittest.cpp  kfiledialog_unittest.cpp  kfontsettingsdata_unittest.cpp  khintssettings_unittest.cpp  tst_filedialog.qml
qt5/autotests/qml/: filedialog_withparent.qml
qt5/src/platformtheme/: CMakeLists.txt  kdeplatformfiledialoghelper.cpp  kdeplatformfiledialoghelper.h  kdeplatformsystemtrayicon.cpp  kdeplatformtheme.cpp  kdeplatformtheme.h  kdirselectdialog.cpp  kfontsettingsdata.cpp  khintssettings.cpp  kwaylandintegration.cpp  qdbusmenubar_p.h  qtquickrenderersettings.cpp  qxdgdesktopportalfiledialog.cpp  x11integration.cpp
qt5/tests/: CMakeLists.txt
qt6/: CMakeLists.txt
qt6/autotests/: CMakeLists.txt  kdeplatformtheme_kdeglobals  kdeplatformtheme_unittest.cpp  kdirselectdialog_unittest.cpp  kfiledialog_unittest.cpp  kfiledialogqml_unittest.cpp  kfontsettingsdata_unittest.cpp  khintssettings_unittest.cpp  ksni_unittest.cpp  tst_filedialog.qml
qt6/autotests/qml/: filedialog_parentless.qml  filedialog_withparent.qml
qt6/src/platformtheme/: CMakeLists.txt  a11yextension.cpp  a11yextension.h  kdeplatformcolordialoghelper.cpp  kdeplatformcolordialoghelper.h  kdeplatformfiledialogbase_p.h  kdeplatformfiledialoghelper.cpp  kdeplatformfiledialoghelper.h  kdeplatformfontdialoghelper.cpp  kdeplatformfontdialoghelper.h  kdeplatformmessagedialoghelper.cpp  kdeplatformmessagedialoghelper.h  kdeplatformsystemtrayicon.cpp  kdeplatformsystemtrayicon.h  kdeplatformtheme.cpp  kdeplatformtheme.h  kdirselectdialog.cpp  kdirselectdialog_p.h  kfiletreeview.cpp  kfiletreeview_p.h  kfontsettingsdata.cpp  khintssettings.cpp  khintssettings.h  kiodelegate.cpp  kiodelegate.h  kioopenwith.cpp  kioopenwith.h  kioopenwith_windowid.h  kioopenwithxdp.cpp  kioopenwithxdp.h  kwaylandintegration.cpp  kwaylandintegration.h  messageboxsoundhandlerqt.cpp  messageboxsoundhandlerqt.h  mono_font.upd  qdbusmenubar.cpp  qdbusmenubar_p.h  qdbusmenubarwrapper.h  qtquickrenderersettings.cpp  qxdgdesktopportalfiledialog.cpp  (+2 more)
qt6/tests/: CMakeLists.txt  HoverEffectTest.qml  qfiledialogtest.cpp
src/: CMakeLists.txt  Messages.sh
src/kirigami-integration/: CMakeLists.txt  kirigamiplasmatheme.cpp  kirigamiplasmatheme.h  plasmadesktoptheme.cpp  plasmadesktoptheme.h  plasmadesktopthemefactory.cpp  plasmadesktopthemefactory.h
src/platforminputcontextplugin/: CMakeLists.txt  loader.cpp  loader.h  main.cpp  plasma-key-data.pc.in  plasmaim.json  plasmaimcontext.cpp  plasmaimcontext.h
src/platforminputcontextplugin/data/: plasmakeydata.h
src/platformtheme/: CMakeLists.txt  annotatingjob.cpp  annotatingjob.h  colordialog.cpp  colordialog.h  config-platformtheme.h.cmake  filefilterconverter.h  kdeplatformcolordialog.cpp  kdeplatformcolordialog.h  kdeplatformfiledialogbase.cpp  kdeplatformfiledialogbase_p.h  kdeplatformfiledialoghelper.cpp  kdeplatformfiledialoghelper.h  kdeplatformsystemtrayicon.cpp  kdeplatformsystemtrayicon.h  kdeplatformtheme.cpp  kdeplatformtheme.h  kdirselectdialog.cpp  kdirselectdialog_p.h  kfiletreeview.cpp  kfiletreeview_p.h  kfontsettingsdata.cpp  kfontsettingsdata.h  khintssettings.cpp  khintssettings.h  kwaylandintegration.cpp  kwaylandintegration.h  main.cpp  mono_font.pl  qdbusmenubar.cpp  qdbusmenubar_p.h  qtquickrenderersettings.cpp  qxdgdesktopportalfiledialog.cpp  qxdgdesktopportalfiledialog_p.h  renderer.kcfg  renderersettings.kcfgc  x11integration.cpp  x11integration.h
src/platformtheme/qml/: ColorCell.qml  ColorDialog.qml  ColorHandle.qml  DraggyThingy.qml  Expandable.qml  GradientedSlider.qml  HSV.qml  Messages.sh  Pencil.qml  PencilBox.qml  RGB.qml  SavedColors.qml  Slidy.qml  org.kde.plasma.integration.qml.qrc
tests/: CMakeLists.txt  HoverEffectTest.qml  qfiledialogtest.cpp  systraymenuexclusiveactionstest.cpp  windowdecotest.cpp
(+9 files in other folders)
